<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.3</version> <!-- Keep this in sync with spring.boot.version -->
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>io.oxalate</groupId>
    <artifactId>oxalate-service-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>oxalate-service-parent</name>
    <packaging>pom</packaging>

    <properties>
        <java.version>21</java.version>
        <spring.boot.version>3.3.3</spring.boot.version> <!-- Keep this in sync with the parent version -->
        <flyway.version>10.18.0</flyway.version>
        <jjwt.version>0.12.6</jjwt.version>
        <swagger.version>2.2.23</swagger.version>
    </properties>

    <build>
        <plugins>
            <plugin> <!-- This is needed so that maven finds the correct MainClass in service module -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>api</module>
        <module>service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>${swagger.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
